tests/ui/pattern/pat-type-err-let-stmt.stderr
error[E0308]: mismatched types
  --> $DIR/pat-type-err-let-stmt.rs:7:9
   |
LL |     let Ok(0): Option<u8> = 42u8;
   |         ^^^^^  ---------- expected due to this
   |         |
   |         expected `Option<u8>`, found `Result<_, _>`
   |
   = note: expected enum `Option<u8>`
              found enum `Result<_, _>`

error[E0308]: mismatched types
  --> $DIR/pat-type-err-let-stmt.rs:11:9
   |
LL |     let Ok(0): Option<u8>;
   |         ^^^^^  ---------- expected due to this
   |         |
   |         expected `Option<u8>`, found `Result<_, _>`
   |
   = note: expected enum `Option<u8>`
              found enum `Result<_, _>`

error[E0308]: mismatched types
  --> $DIR/pat-type-err-let-stmt.rs:15:9
   |
LL |     let Ok(0) = 42u8;
   |         ^^^^^   ---- this expression has type `u8`
   |         |
   |         expected `u8`, found `Result<_, _>`
   |
   = note: expected type `u8`
              found enum `Result<_, _>`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
